[package]
name = "earth_satellite_state"
version = "0.1.2"
edition = "2024"
authors = ["Wzh <wzh@uvwee.com>"]
description = "Earth satellite state conversion"
license = "MIT"
repository = "https://github.com/wzh19960613/earth_satellite_state_rust"

[dependencies]
nalgebra = "0.33.2"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2.0.12"
isomorphic = { version = "0.1.1", features = ["macros"] }

[features]
default = []
serde = ["dep:serde", "nalgebra/serde", "nalgebra/serde-serialize"]